disable blinking indicators added in `3cea890eba0b5137adcc4cb0d4fa2b2286914892`

--- a/packages/frontend/src/style.scss
+++ b/packages/frontend/src/style.scss
@@ -515,7 +515,7 @@ html[data-color-scheme=dark] ._woodenFrame {
 }
 
 ._blink {
-	animation: blink 1s infinite;
+	//animation: blink 1s infinite;
 }
 
 @keyframes blink {
